# netudp

./: .clang-format  .clang-tidy  .gitignore  .mcp.json  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.claude/: settings.json
.claude/agents/: accessibility-reviewer.md  api-designer.md  architect.md  build-engineer.md  code-reviewer.md  context-intelligence.md  database-architect.md  devops-engineer.md  docs-writer.md  i18n-engineer.md  implementer.md  migration-engineer.md  netudp-bench-expert.md  netudp-cpp-expert.md  netudp-perf-expert.md  netudp-protocol-expert.md  netudp-security-expert.md  netudp-simd-expert.md  netudp-socket-expert.md  performance-engineer.md  refactoring-agent.md  researcher.md  security-reviewer.md  team-lead.md  tester.md  ux-reviewer.md
.claude/commands/: rulebook-decision-create.md  rulebook-decision-list.md  rulebook-knowledge-add.md  rulebook-knowledge-list.md  rulebook-learn-capture.md  rulebook-learn-list.md  rulebook-memory-save.md  rulebook-memory-search.md  rulebook-task-apply.md  rulebook-task-archive.md  rulebook-task-create.md  rulebook-task-list.md  rulebook-task-show.md  rulebook-task-validate.md
.claude/hooks/: check-context-and-handoff.sh  enforce-mcp-for-tasks.sh  enforce-no-deferred.sh  enforce-no-shortcuts.sh  on-compact-reinject.sh  resume-from-handoff.sh
.claude/rules/: consult-analysis-before-implementing.md  diagnostic-first.md  fail-twice-escalate.md  follow-task-sequence.md  full-task-no-questions.md  git-safety.md  incremental-implementation.md  multi-agent-teams.md  no-shortcuts.md  research-first.md  respect-handoff-trigger.md  sequential-editing.md
.claude/skills/accessibility/: SKILL.md
.claude/skills/analysis/: SKILL.md
.claude/skills/api-design/: SKILL.md
.claude/skills/architect/: SKILL.md
.claude/skills/build-fix/: SKILL.md
.claude/skills/db-design/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/migrate/: SKILL.md
.claude/skills/perf/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/workflows/: bench.yml  ci.yml  codespell.yml  release.yml
.rulebook/: rulebook.json
.rulebook/specs/: AGENT_AUTOMATION.md  GIT.md  MULTI_AGENT.md  QUALITY_ENFORCEMENT.md  RULEBOOK.md  TIER1_PROHIBITIONS.md  TOKEN_OPTIMIZATION.md
.rulebook/tasks/: README.md
.rulebook/tasks/phase0_project-setup/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/phase10_profiling-audit/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/phase11_connection-fast-path/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/phase12_multi-thread-scale/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/phase13_windows-batch-send/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/phase14_io-uring/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/phase15_aes-gcm-fast-path/: .metadata.json  proposal.md  tasks.md
bench/: CMakeLists.txt  bench_coalescing.cpp  bench_compression.cpp  bench_crypto.cpp  bench_latency.cpp  bench_main.cpp  bench_main.h  bench_memory.cpp  bench_pps.cpp  bench_pvp_sim.cpp  bench_scalability.cpp  bench_simd_compare.cpp  bench_throughput.cpp
cmake/: zig-toolchain.cmake
docs/: DAG.md  PRD.md  ROADMAP.md  architecture.md  uzengine-integration.md
docs/guides/: windows-server-tuning.md
docs/reports/: benchmark-v1.2.0.md  crypto-benchmark.md
docs/specs/: 00-project-setup.md  01-simd.md  02-platform-sockets.md  03-memory-pools.md  04-crypto.md  05-connect-tokens.md  06-channels.md  07-reliability.md  08-fragmentation.md  09-wire-format.md  10-bandwidth-congestion.md  11-compression.md  12-statistics.md  13-public-api.md  14-benchmarks.md  15-network-simulator.md  16-sdk-cpp-wrapper.md  17-sdk-uzengine.md  18-sdk-unreal.md  19-sdk-unity.md  20-sdk-godot.md  README.md
examples/: CMakeLists.txt  chat_server.c  echo_client.c  echo_server.c  stress_test.c
include/netudp/: netudp.h  netudp_buffer.h  netudp_config.h  netudp_profiling.h  netudp_token.h  netudp_types.h
scripts/: build.bat  build.sh  package.bat  profile_zones.cpp
sdk/cpp/: README.md  example.cpp  netudp.hpp
src/: api.cpp  client.cpp  server.cpp
src/bandwidth/: bandwidth.h
src/channel/: channel.h
src/compress/: compressor.h
src/connection/: client_state.h  connect_token.cpp  connect_token.h  connection.h  ddos.h  rate_limiter.h
src/core/: address.cpp  address.h  allocator.h  hash_map.h  log.h  platform.h  pool.h  ring_buffer.h
src/crypto/: aead.cpp  aead.h  aead_aesgcm.cpp  aead_dispatch.cpp  aead_dispatch.h  crc32c.cpp  crc32c.h  packet_crypto.cpp  packet_crypto.h  random.cpp  random.h  replay.h  xchacha.cpp  xchacha.h
src/fragment/: fragment.h
src/group/: group.h
src/profiling/: profiler.cpp  profiler.h
src/reliability/: packet_tracker.h  reliable_channel.h  rtt.h
src/replication/: entity.h  replicate.cpp  replicate.h  schema.h
src/sim/: network_sim.cpp  network_sim.h
src/simd/: netudp_simd.h  netudp_simd_detect.cpp  simd_avx2.cpp  simd_generic.cpp  simd_neon.cpp  simd_sse42.cpp
src/socket/: socket.cpp  socket.h  socket_rio.cpp  socket_rio.h  socket_uring.cpp  socket_uring.h
src/stats/: stats.h
src/wire/: frame.h
tests/: CMakeLists.txt  test_address.cpp  test_batch_api.cpp  test_batch_io.cpp  test_buffer_api.cpp  test_channels.cpp  test_compressor.cpp  test_connect_token.cpp  test_containers.cpp  test_coverage_extra.cpp  test_coverage_gaps.cpp  test_coverage_v13.cpp  test_crypto.cpp  test_echo_integration.cpp  test_fragment.cpp  test_frame_coalescing.cpp  test_groups.cpp  test_handshake.cpp  test_init.cpp  test_network_sim.cpp  test_packet_crypto.cpp  test_phase36_38.cpp  test_phase5.cpp  test_priority_rate.cpp  test_rekey.cpp  test_reliability.cpp  test_replay.cpp  test_replication.cpp  test_simd.cpp  test_simd_all_impls.cpp  test_socket.cpp  test_state_overwrite.cpp
(+234 files in other folders)
